# src/api/jobs/jobs.service.js
@@ -5,14 +5,14 @@ import { serialize } from '../../utils/serialize.js';
 
 export async function createJob(userId, data) {
   const {
-      title, description, price, images = [], videos = [],
+      title, description, price, images = [],
       regionId, cityId, address
     } = data;
 
   const job = await prisma.job.create({
     data: {
       title, description, price,
-      images, videos, regionId,
+      images, regionId,
       cityId, address, userId
     }
   });
